fix post error